# dotfiles-nix

./: .dir-locals.el  .editorconfig  .envrc  .gitignore  .sops.yaml  README.MD  buildbot-nix.toml  buildbotJobs.nix  config.nix  current.nix.example  default.nix  devshells.nix  flake.nix  flakeCompat.nix  ftbfs.patch  hm-switch.sh  home.nix  homes.nix  inputs.nix  install-home-manager.sh  install.nix  legacyPackages.nix  mine.nix  nix-channels  nixos-common.nix  nixos-yubikey.nix  overlays.nix  repl.nix  shell.nix
.nixpkgs/: config.nix  neovim-4.0.1.tgz
ci/: check-nix-files.sh
cli/: default.nix  gpg-agent.nix  lorri.nix  neovim.nix
gui/: colors.nix  default.nix  doom-emacs.nix  fonts.nix  kitty.nix  nix-doom-emacs.nix  termite.nix  urxvt.nix
hm-secrets/: keys.yaml
home/: alacritty.nix  awesome.nix  bspwm.nix  colors.nix  compton.nix  doom-emacs.nix  dunst.nix  emacs.nix  hexToDec.nix  i3.nix  keepass.nix  neovim.nix  polybar.nix  termite.nix  xmonad.nix
home-manager/: default.nix  foreign.nix  pc.nix  steamdeck.nix  t14.nix
hosts/: common.nix  home.nix  work.nix
installers/: common.nix  flake.nix  minimal.nix  plasma6.nix
modules/: buildbotJobs.nix  colors.nix  default.nix  ghostty.nix  hexToDec.nix  kbdd.nix  nix-gc.nix  nix-registry.nix  polybar-program.nix  (+2 more)
profiles/wm/penrose/my-penrose-config/: .envrc  Cargo.nix  Cargo.toml  default.nix  derivation.nix  shell.nix  update-crate2nix.sh
profiles/wm/penrose/my-penrose-config/src/: main.rs
profiles/wm/xmonad/my-colors/: CHANGELOG.md  my-colors.cabal
profiles/wm/xmonad/my-colors/src/: Colors.hs
(+544 files in other folders)
