[package]
name = "my_penrose_config"
version = "0.1.0"
authors = ["Adomas Jatužis <adomixaszvers@gmail.com>"]
edition = "2018"

[[bin]]
name = "penrose"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
penrose = { git = "https://github.com/sminez/penrose", branch = "develop" }
simplelog = "0.8"
